k8s/worker1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker1deploy
  labels:
    app: worker1deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker1deploy
  template:
    metadata:
      labels:
        app: worker1deploy
    spec:
      containers:
      - name: worker1deploy
        image: ghcr.io/cs-muic/scalable-p2-scalable-t3-harinkha/worker1:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
            name: http
      imagePullSecrets:
        - name: secret

---
apiVersion: v1
kind: Service
metadata:
  name: worker1deploy
spec:
  selector:
    app: worker1deploy
  type: ClusterIP  
  ports:
    - name: http
      port: 80
      targetPort: 5000
