k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: webappdeploy
            port:
              number: 80
      - path: /
        pathType: Exact
        backend:
          service: 
            name: webappdeploy
            port:
              number: 80
